--- a/content/events/the-flow-podcast-featuring-jigsaw-stack.mdx
+++ b/content/events/the-flow-podcast-featuring-jigsaw-stack.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Flow Podcast"
+title: "\"The Flow\" Podcast, Featuring JigsawStack"
 slug: "the-flow-podcast-featuring-jigsaw-stack"
 excerpt: "In this episode, we talk with Yoeven Khemlani, founder and CEO of JigsawStack, about their purpose built AI models, object detection, and the latest in using small models for more efficient processing."
 type: "virtual"
