--- a/content/events/the-flow-podcast-featuring-openai.mdx
+++ b/content/events/the-flow-podcast-featuring-openai.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Flow Podcast"
+title: "\"The Flow\" Podcast, Featuring OpenAI"
 slug: "the-flow-podcast-featuring-openai"
 excerpt: "This week on The Flow, we're discussing the latest \"what's up?\" with Dominik Kundel from OpenAI. We'll talk about GPT OSS, run GPT locally (<-- yes, I said that), and learn some actionable tidbits for developers."
 type: "virtual"
