--- a/content/events/the-flow-podcast-featuring-stytch.mdx
+++ b/content/events/the-flow-podcast-featuring-stytch.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Flow Podcast"
+title: "\"The Flow\" Podcast, Featuring Stytch: Security in the AI Landscape"
 slug: "the-flow-podcast-featuring-stytch"
 excerpt: "In this episode of The Flow, we talk with Max Gerber from Stytch about the role of security in the AI landscape and how standards like OAuth are evolving to meet the needs of AI and MCP."
 type: "virtual"
