--- a/content/events/the-flow-podcast-featuring-twelve-labs.mdx
+++ b/content/events/the-flow-podcast-featuring-twelve-labs.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Flow Podcast"
+title: "\"The Flow\" Podcast, Featuring Twelve Labs"
 slug: "the-flow-podcast-featuring-twelve-labs"
 excerpt: "In this episode of The Flow, we speak with James Le from TwelveLabs, as he shows us how to search, analyze, index, and edit videos using TwelveLabs AI. Want to generate a movie of your favorite clips, search across videos for a specific object, or maybe pull out key moments TwelveLabs is a good place to start."
 type: "virtual"
