--- a/content/events/the-flow-podcast-featuring-twilio.mdx
+++ b/content/events/the-flow-podcast-featuring-twilio.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Flow Podcast"
+title: "\"The Flow\" Podcast, Featuring Twilio"
 slug: "the-flow-podcast-featuring-twilio"
 excerpt: "In the latest episode of The Flow, David and Carter are joined by Kaelyn Chresfield, Developer Evangelist at Twilio. They'll look into the new Conversational Relay API, dive into a bit of code, and talk about how it can expand the reach of AI agents.
 "
