--- a/content/events/the-flow-podcast-featuring-arize.mdx
+++ b/content/events/the-flow-podcast-featuring-arize.mdx
@@ -1,5 +1,5 @@
 ---
-title: "The Flow Podcast"
+title: "\"The Flow\" Podcast, Featuring Arize"
 slug: "the-flow-podcast-featuring-arize"
 excerpt: "This week on The Flow, we’re joined by Richard Young from Arize to break down how to evaluate and compare the performance of LLMs and AI agents. We’ll walk through Arize’s observability tools and the code you need to get started."
 type: "virtual"
