Fix podcast image

--- a/content/pages/podcast.mdx
+++ b/content/pages/podcast.mdx
@@ -4,7 +4,7 @@ slug: "podcast"
 thumbnail: "/content/images/pages/d94d8a6ebb485d6b03844d668702dd4ee5635690-1024x1024.jpg"
 ---
 
-<div style="width:400px"><img src="/content/images/pages/d94d8a6ebb485d6b03844d668702dd4ee5635690-1024x1024.jpg
+<div style="width:400px"><img src="/content/images/pages/d94d8a6ebb485d6b03844d668702dd4ee5635690-1024x1024.jpg" alt="The Flow Podcast" /></div>
 
 Welcome to the home of "The Flow", our podcast where we focus on what developers need to know to build the next generation of software using AI, agents and MCP.
 
