Fix podcast featuring stytch watch button

--- a/content/events/the-flow-podcast-featuring-stytch.mdx
+++ b/content/events/the-flow-podcast-featuring-stytch.mdx
@@ -17,5 +17,5 @@ In this episode of "The Flow", we talk with Max Gerber from Stytch about the rol
 ####
 October 14th at 11:00AM PDT / 2:00PM EDT
 ####
-<button href="https://www.youtube.com/watch?v=7ZFAVsgQTC8![](/content/images/events/8d34528b8304a2e32021a095f7c3660c5290a025-624x20.png)">WATCH HERE</button>
+<button href="https://www.youtube.com/watch?v=7ZFAVsgQTC8">WATCH HERE</button>
 Click "notify me" to get a reminder for the event!
