Migrate talks to local mdx content

--- a/content/events/openrag-summit.mdx
+++ b/content/events/openrag-summit.mdx
@@ -8,6 +8,12 @@ dates:
     time: "09:00"
 location: "Online"
 thumbnail: "/content/images/events/8a53096db84c6f9b0e7c3f23ab329d08734dc05e-1200x628.jpg"
+talks:
+  - why-open-wins
+  - introduction-to-openrag
+  - ingesting-unstructured-data-with-docling
+  - natural-language-search-with-opensearch
+  - building-rag-workflows-with-langflow
 ---
 
 Something BIG is coming November 13.
