Add event time zones

--- a/content/events/hacking-agents-bay-area-july-meetup.mdx
+++ b/content/events/hacking-agents-bay-area-july-meetup.mdx
@@ -8,6 +8,7 @@ type: "in-person"
 dates:
   - date: "2025-07-31"
     time: "17:30"
+    timezone: "PDT (UTC-07)"
 location: "AWS Builder Loft (San Francisco, CA)"
 thumbnail: "/content/images/events/59931eb076cf49aa076c589de19ba76e1ed8437f-2483x2296.png"
 ---
