--- a/content/events/hacking-agents-nyc-area-nov-meetup.mdx
+++ b/content/events/hacking-agents-nyc-area-nov-meetup.mdx
@@ -6,6 +6,7 @@ type: "in-person"
 dates:
   - date: "2025-11-10"
     time: "17:00"
+    timezone: "EST (UTC-05)"
 location: "1 Madison Ave"
 thumbnail: "/content/images/events/e6f74706418f86b0b2dfc70d118cfc314f3b816d-1024x1024.png"
 ---
