--- a/content/events/openrag-summit.mdx
+++ b/content/events/openrag-summit.mdx
@@ -6,6 +6,7 @@ type: "virtual"
 dates:
   - date: "2025-11-13"
     time: "09:00"
+    timezone: "PST (UTC-08)"
 location: "Online"
 thumbnail: "/content/images/events/8a53096db84c6f9b0e7c3f23ab329d08734dc05e-1200x628.jpg"
 talks:
