--- a/content/events/shift-kl.mdx
+++ b/content/events/shift-kl.mdx
@@ -6,6 +6,7 @@ type: "in-person"
 dates:
   - date: "2025-11-04"
     time: "09:30"
+    timezone: "+08 (UTC+08)"
 location: "Kuala Lumpur"
 thumbnail: "/content/images/events/5b72430b362649fd0c24cb42e6e514df2c742f22-2400x1260.png"
 ---
