--- a/content/events/the-flow-podcast-featuring-arize.mdx
+++ b/content/events/the-flow-podcast-featuring-arize.mdx
@@ -6,6 +6,7 @@ type: "virtual"
 dates:
   - date: "2025-07-30"
     time: "11:00"
+    timezone: "PDT (UTC-07)"
 location: "Online"
 thumbnail: "/content/images/events/80f82ec88dc0e4694592578a8130e21cd118758e-1920x1080.png"
 ---
