--- a/content/events/the-flow-podcast-featuring-docling.mdx
+++ b/content/events/the-flow-podcast-featuring-docling.mdx
@@ -6,6 +6,7 @@ type: "virtual"
 dates:
   - date: "2025-09-03"
     time: "11:00"
+    timezone: "PDT (UTC-07)"
 location: "Online"
 thumbnail: "/content/images/events/09efe946baefaa8884886ab51727a1f716cafaf3-1920x1080.png"
 ---
