--- a/content/events/the-flow-podcast-featuring-jigsaw-stack.mdx
+++ b/content/events/the-flow-podcast-featuring-jigsaw-stack.mdx
@@ -6,6 +6,7 @@ type: "virtual"
 dates:
   - date: "2025-08-20"
     time: "11:00"
+    timezone: "PDT (UTC-07)"
 location: "Online"
 thumbnail: "/content/images/events/3fe27bcef509a322a6ac09d66620a7c6db95a9e4-1920x1080.png"
 ---
