--- a/content/events/the-flow-podcast-featuring-openai.mdx
+++ b/content/events/the-flow-podcast-featuring-openai.mdx
@@ -6,6 +6,7 @@ type: "virtual"
 dates:
   - date: "2025-08-13"
     time: "11:00"
+    timezone: "PDT (UTC-07)"
 location: "Online"
 thumbnail: "/content/images/events/4f6039e15d33645869654485fa7f9d12c41b53a3-1920x1080.png"
 ---
