--- a/content/events/the-flow-podcast-featuring-stytch.mdx
+++ b/content/events/the-flow-podcast-featuring-stytch.mdx
@@ -6,6 +6,7 @@ type: "virtual"
 dates:
   - date: "2025-10-14"
     time: "11:00"
+    timezone: "PDT (UTC-07)"
 location: "Online"
 thumbnail: "/content/images/events/597b1938f34951c30bb0afe0011285316d256f5a-1920x1080.png"
 ---
