--- a/content/events/the-flow-podcast-featuring-twelve-labs.mdx
+++ b/content/events/the-flow-podcast-featuring-twelve-labs.mdx
@@ -6,6 +6,7 @@ type: "virtual"
 dates:
   - date: "2025-08-27"
     time: "11:00"
+    timezone: "PDT (UTC-07)"
 location: "Online"
 thumbnail: "/content/images/events/e899d6879c209ff2c0b7bc80b8936300762f63a8-1920x1080.png"
 ---
