--- a/content/events/the-flow-podcast-featuring-twilio.mdx
+++ b/content/events/the-flow-podcast-featuring-twilio.mdx
@@ -7,6 +7,7 @@ type: "virtual"
 dates:
   - date: "2025-07-09"
     time: "09:30"
+    timezone: "PDT (UTC-07)"
 location: "Online"
 thumbnail: "/content/images/events/7d0deb5c9b35ccb8fcdcb3751bb79e1e855647de-1512x851.png"
 ---
