Add missing talk details

--- a/content/events/hacking-agents-nyc-area-nov-meetup.mdx
+++ b/content/events/hacking-agents-nyc-area-nov-meetup.mdx
@@ -9,6 +9,8 @@ dates:
     timezone: "EST (UTC-05)"
 location: "1 Madison Ave"
 thumbnail: "/content/images/events/e6f74706418f86b0b2dfc70d118cfc314f3b816d-1024x1024.png"
+talks:
+  - docling-an-intro-to-docling
 ---
 
 We'll have engaging talks from speakers, plenty of time to network with fellow AI enthusiasts, and of course, some tasty light refreshments to keep the conversations flowing.
