Add missing talk details

--- a/content/events/shift-kl.mdx
+++ b/content/events/shift-kl.mdx
@@ -9,6 +9,8 @@ dates:
     timezone: "+08 (UTC+08)"
 location: "Kuala Lumpur"
 thumbnail: "/content/images/events/5b72430b362649fd0c24cb42e6e514df2c742f22-2400x1260.png"
+talks:
+  - how-to-thrive-as-a-professional
 ---
 
 Get ready — the globally acclaimed developer-festival Shift Conference is coming to Asia for the first time: **November 4, 2025** at JioSpace (Petaling Jaya, KL).
